Change 'Guest' header to read 'Away'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button class="score-button" onclick="increment('home', 3)">+3</button>
             </div>
             <div>
-                <h3 class="title">GUEST</h3>
+                <h3 class="title">AWAY</h3>
                 <h3 id="guest-score">0</h3>
                 <button class="score-button" onclick="increment('guest', 1)">+1</button>
                 <button class="score-button" onclick="increment('guest', 2)">+2</button>
